// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customer match snapshot 1`] = `
<DocumentFragment>
  <h2>
    Клиент
  </h2>
  <div
    class="customer"
  >
    <div
      class="line"
    >
      <div
        class="inline"
      >
        <div
          class="half"
        >
          <div
            class="name"
          >
            ФИО
          </div>
          <div
            class="value"
          >
            Иван Иванович Иванов
          </div>
        </div>
        <div
          class="half"
        >
          <div
            class="name"
          >
            Статус обработки
          </div>
          <div
            class="value"
          >
            Processed
          </div>
        </div>
      </div>
    </div>
    <div
      class="line"
    >
      <div
        class="inline"
      >
        <div
          class="half"
        >
          <div
            class="name"
          >
            Пол
          </div>
          <div
            class="value"
          >
            Женский
          </div>
        </div>
        <div
          class="half"
        >
          <div
            class="name"
          >
            Дата рождения
          </div>
          <div
            class="value"
          >
            1990-01-31
          </div>
        </div>
      </div>
    </div>
    <div
      class="line"
    >
      <div
        class="name"
      >
        Мобильный телефон
      </div>
      <div
        class="inline"
      >
        <div
          class="half"
        >
          <div
            class="value"
          >
            79001234567
          </div>
          <p
            class="good status"
          >
            Валидный
          </p>
          <p
            class="good status"
          >
            Подтвержден
          </p>
        </div>
        <div
          class="half"
        >
          <div
            class="value"
          >
            79652026149
          </div>
          <p
            class="bad status"
          >
            Ожидает подтверждения
          </p>
        </div>
      </div>
    </div>
    <div
      class="line"
    >
      <div
        class="name"
      >
        Email
      </div>
      <div
        class="inline"
      >
        <div
          class="half"
        >
          <div
            class="value"
          >
            test@mindbox.ru
          </div>
          <p
            class="good status"
          >
            Валидный
          </p>
        </div>
        0
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <div
          class="name"
        >
          Зона
        </div>
        <div
          class="value"
        >
          Москва
        </div>
        <p
          class="neutral status"
        >
          MoscowCity
        </p>
      </div>
      <div
        class="half"
      >
        <div
          class="name"
        >
          Часовой пояс
        </div>
        <div
          class="value"
        >
          Asia/Hong_Kong
        </div>
        <p
          class="neutral status"
        >
          Определили в трекере
        </p>
      </div>
    </div>
    <div>
      <div
        class="name"
      >
        Дополнительные поля
        <button
          class=" small button normal false basic"
          type="button"
        >
          <div>
            <svg
              fill="none"
              height="5"
              viewBox="0 0 8 5"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M0.0344238 1.16905L0.732916 0.502381L3.54531 3.1561L6.33428 0.499939L7.03473 1.16647L3.53314 4.50002L0.0344238 1.16905Z"
                fill="#000"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`customer match snapshot 2`] = `
<DocumentFragment>
  <h2>
    Клиент
  </h2>
  <div
    class="customer"
  >
    <div
      class="line"
    >
      <div
        class="inline"
      >
        <div
          class="half"
        >
          <div
            class="name"
          >
            ФИО
          </div>
          <div
            class="value"
          >
            Иван Иванович Иванов
          </div>
        </div>
        <div
          class="half"
        >
          <div
            class="name"
          >
            Статус обработки
          </div>
          <div
            class="value"
          >
            Processed
          </div>
        </div>
      </div>
    </div>
    <div
      class="line"
    >
      <div
        class="inline"
      >
        <div
          class="half"
        >
          <div
            class="name"
          >
            Пол
          </div>
          <div
            class="value"
          >
            Женский
          </div>
        </div>
        <div
          class="half"
        >
          <div
            class="name"
          >
            Дата рождения
          </div>
          <div
            class="value"
          >
            1990-01-31
          </div>
        </div>
      </div>
    </div>
    <div
      class="line"
    >
      <div
        class="name"
      >
        Мобильный телефон
      </div>
      <div
        class="inline"
      >
        <div
          class="half"
        >
          <div
            class="value"
          >
            79001234567
          </div>
          <p
            class="good status"
          >
            Валидный
          </p>
          <p
            class="good status"
          >
            Подтвержден
          </p>
        </div>
        <div
          class="half"
        >
          <div
            class="value"
          >
            79652026149
          </div>
          <p
            class="bad status"
          >
            Ожидает подтверждения
          </p>
        </div>
      </div>
    </div>
    <div
      class="line"
    >
      <div
        class="name"
      >
        Email
      </div>
      <div
        class="inline"
      >
        <div
          class="half"
        >
          <div
            class="value"
          >
            test@mindbox.ru
          </div>
          <p
            class="good status"
          >
            Валидный
          </p>
        </div>
        0
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <div
          class="name"
        >
          Зона
        </div>
        <div
          class="value"
        >
          Москва
        </div>
        <p
          class="neutral status"
        >
          MoscowCity
        </p>
      </div>
      <div
        class="half"
      >
        <div
          class="name"
        >
          Часовой пояс
        </div>
        <div
          class="value"
        >
          Asia/Hong_Kong
        </div>
        <p
          class="neutral status"
        >
          Определили в трекере
        </p>
      </div>
    </div>
    <div>
      <div
        class="name"
      >
        Дополнительные поля
        <button
          class=" small button normal false basic"
          type="button"
        >
          <div>
            <svg
              fill="none"
              height="5"
              viewBox="0 0 8 5"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M0.0344238 1.16905L0.732916 0.502381L3.54531 3.1561L6.33428 0.499939L7.03473 1.16647L3.53314 4.50002L0.0344238 1.16905Z"
                fill="#000"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </button>
      </div>
      <div
        class="inline line"
      >
        <div
          class="half value"
        >
          child1Sex
        </div>
        <div
          class="half value"
        >
          <span
            class="neutral"
          >
            Пусто
          </span>
        </div>
      </div>
      <div
        class="inline line"
      >
        <div
          class="half value"
        >
          clearTestClient
        </div>
        <div
          class="half value"
        >
          <span
            class="neutral"
          >
            Пусто
          </span>
        </div>
      </div>
      <div
        class="inline line"
      >
        <div
          class="half value"
        >
          isCompany
        </div>
        <div
          class="half value"
        >
          true
        </div>
      </div>
      <div
        class="inline line"
      >
        <div
          class="half value"
        >
          multiline
        </div>
        <div
          class="half value"
        >
          <div>
            1
          </div>
          <div>
            2
          </div>
        </div>
      </div>
      <div
        class="inline line"
      >
        <div
          class="half value"
        >
          singleline
        </div>
        <div
          class="half value"
        >
          <div>
            56
          </div>
          <div>
            <span
              class="neutral"
            >
              Пусто
            </span>
          </div>
        </div>
      </div>
      <div
        class="inline line"
      >
        <div
          class="half value"
        >
          walletCardLink
        </div>
        <div
          class="half value"
        >
          <span
            class="neutral"
          >
            Пусто
          </span>
        </div>
      </div>
      <div
        class="inline line"
      >
        <div
          class="half value"
        >
          walletCardQrCodeLink
        </div>
        <div
          class="half value"
        >
          <span
            class="neutral"
          >
            Пусто
          </span>
        </div>
      </div>
      <div
        class="inline line"
      >
        <div
          class="half value"
        >
          walletCardSubscription
        </div>
        <div
          class="half value"
        >
          false
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`customer match snapshot 3`] = `
<DocumentFragment>
  <h2>
    Клиент
  </h2>
  <div
    class="customer"
  >
    <div
      class="line"
    >
      <div
        class="inline"
      >
        <div
          class="half"
        >
          <div
            class="name"
          >
            ФИО
          </div>
          <div
            class="value"
          >
            Иван Иванович Иванов
          </div>
        </div>
        <div
          class="half"
        >
          <div
            class="name"
          >
            Статус обработки
          </div>
          <div
            class="value"
          >
            Processed
          </div>
        </div>
      </div>
    </div>
    <div
      class="line"
    >
      <div
        class="inline"
      >
        <div
          class="half"
        >
          <div
            class="name"
          >
            Пол
          </div>
          <div
            class="value"
          >
            Женский
          </div>
        </div>
        <div
          class="half"
        >
          <div
            class="name"
          >
            Дата рождения
          </div>
          <div
            class="value"
          >
            1990-01-31
          </div>
        </div>
      </div>
    </div>
    <div
      class="line"
    >
      <div
        class="name"
      >
        Мобильный телефон
      </div>
      <div
        class="inline"
      >
        <div
          class="half"
        >
          <div
            class="value"
          >
            79001234567
          </div>
          <p
            class="good status"
          >
            Валидный
          </p>
          <p
            class="good status"
          >
            Подтвержден
          </p>
        </div>
        <div
          class="half"
        >
          <div
            class="value"
          >
            79652026149
          </div>
          <p
            class="bad status"
          >
            Ожидает подтверждения
          </p>
        </div>
      </div>
    </div>
    <div
      class="line"
    >
      <div
        class="name"
      >
        Email
      </div>
      <div
        class="inline"
      >
        <div
          class="half"
        >
          <div
            class="value"
          >
            test@mindbox.ru
          </div>
          <p
            class="good status"
          >
            Валидный
          </p>
        </div>
        0
      </div>
    </div>
    <div
      class="inline"
    >
      <div
        class="half"
      >
        <div
          class="name"
        >
          Зона
        </div>
        <div
          class="value"
        >
          Москва
        </div>
        <p
          class="neutral status"
        >
          MoscowCity
        </p>
      </div>
      <div
        class="half"
      >
        <div
          class="name"
        >
          Часовой пояс
        </div>
        <div
          class="value"
        >
          Asia/Hong_Kong
        </div>
        <p
          class="neutral status"
        >
          Определили в трекере
        </p>
      </div>
    </div>
    <div>
      <div
        class="name"
      >
        Дополнительные поля
        <button
          class=" small button normal false basic"
          type="button"
        >
          <div>
            <svg
              fill="none"
              height="5"
              viewBox="0 0 8 5"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M0.0344238 1.16905L0.732916 0.502381L3.54531 3.1561L6.33428 0.499939L7.03473 1.16647L3.53314 4.50002L0.0344238 1.16905Z"
                fill="#000"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
